--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
   align-items: center;
   min-height: 100vh;
   flex-direction: column;
-  background: #ede7f6;
+  background: #000000f2;
 }
 footer{
   position: relative;
@@ -119,7 +119,7 @@ footer p{
   align-items: center;
   margin-right: 10px;
   text-decoration: none;
-  border-radius: 4px;
+ 
 }
 .sci li a:hover{
   background: #f00;
@@ -172,8 +172,179 @@ footer p{
   text-align: center;
   color: #999;
 }
+#price{
+  display: flex;
+  width: 100%;
+  text-align: center;
+  grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+  grid-gap: 12px;
+}
+.pic{
+  background-repeat: no-repeat;
+  height: 300px;
+  width: 100%;
+  border-style: solid;
+  
+  animation-name: pica;
+  animation-iteration-count: infinite;
+  animation-duration: 4s;
+}
+@keyframes pica {
+  0% {
+      box-shadow: 10px 0px 30px  red;
+  }
+  25% {
+      box-shadow: 0px -10px 30px blue;
+  }
+  50% {
+      box-shadow: -10px 0px 30px green;
+  }
+  75%{
+      box-shadow: 0px 10px 30px yellow;
+  }
+  100% {
+      box-shadow: 10px 0px 30px red;
+  }
+  
+}
+#p1{
+  background-image: url("https://source.unsplash.com/400x300/?pizza");
+}
+#p2{
+  background-image: url("https://source.unsplash.com/400x300/?burger");
+}
+#p3{
+  background-image: url("https://source.unsplash.com/400x300/?beverage");
+}
 
 
+.pic{
+  margin: 20px;
+}
+
+form{
+  width: 100%;
+  padding-top: 15px;
+  margin-top: 100px;
+  padding-left: 100px;
+  margin-bottom: 100px;
+  color: white;
+  font-size: 20px;
+ background-color: #1f1d1d4f;
+ border-style: solid 1px black;
+ animation-name: forma;
+    animation-duration: 3s;
+    position: relative;
+    animation-iteration-count: infinite;
+}
+@keyframes forma {
+  0% {
+      box-shadow: 20px -20px 100px red;
+  }
+  50% {
+    box-shadow: -20px 20px 100px red;
+  }
+  100% {
+    box-shadow: 20px -20px 100px red;
+  }
+}
+
+
+#a1{
+  display: flex;
+  flex-direction: row;
+  background-color: #1f1d1d4f;
+  margin-top: 20px;
+  justify-content: center;
+}
+
+#a2{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+}
+
+html{
+  scroll-behavior: smooth;
+}
+
+.a3{
+  width: 40%;
+  text-align: center;
+  margin: 45px 45px 15px 15px;
+  padding: 4px;
+  height: 200px;
+  color: white;
+  border-style: solid;
+  border-color: white;
+}
+
+
+
+
+
+#reviewbar{
+  background-color: #1f1d1d4f;
+  margin-top: 100px;
+  height: 300px;
+  display: inline-block;
+  width: 100%;
+}
+
+.name{
+  font-family: 'Elsie Swash Caps', cursive;
+  font-weight:900;
+  color:rgb(255, 255, 255);
+
+}
+
+.says{
+  font-family: 'Petit Formal Script', cursive;
+  font-weight: bolder;
+}
+
+#rev{
+  display: block;
+  margin: auto;
+  width: 100px;
+  color: white;
+  font-size: 30px;
+
+}
+
+.review{
+  
+ 
+  background-color: #1f1d1d4f;
+  text-align: center;
+  margin: 20px;
+  margin-top: 30px;
+  height: 200px;
+  border-style: solid;
+  display: inline-block;
+  width: 21%;
+  margin-left: 20px;
+  color: white;
+}
+
+.review:hover{
+  background-color: black;
+  
+}
+
+#r1{
+  position: relative;
+}
+
+
+
+#r2{
+  position: relative;
+}
+.order{
+  border: 2px solid white;
+  padding: 20px 20px;
+  margin-right: 150px;
+}
 
 
 
